Created a DatabaseFields interface to be a data transfer object for the Contact and also to give the opportunity for dependency injection. Refactored all tests to work with this implementation.